# lab-etl

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  index.html  mkdocs.yml  output.csv  output2.csv  output3.csv  output4.csv  output5.csv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
cone/: index.html
docs/: cone.md  ftir.md  hfm.md  index.md  mcc.md  sta.md
ftir/: index.html
hfm/: index.html
mcc/: index.html
search/: search_index.json
src/lab_etl/: __about__.py  bruker_ftir_parser.py  deatak_cone_parser.py  faa_mcc_parser.py  fox_hfm_parser  fox_hfm_parser.py  netzsch_sta_ngb_parser.py  netzsch_sta_parser.py  netzsch_sta_raw_parser.py  netzsch_sta_raw_parser_2.py  netzsch_sta_raw_parser_dev.py  util.py
src/labetl/: __about__.py  __init__.py  bruker_ftir_parser.py  deatak_cone_parser.py  faa_mcc_parser.py  fox_hfm_parser.py  netzsch_sta_ngb_parser.py  netzsch_sta_parser.py  util.py
sta/: index.html
tests/: test_faa_mcc_parser.py  test_netzsch_sta_parser.py
tests/test_files/Cone/: 181031_LaGrange_5-1.XLSM  Asphalt_Shingle_Cone_HF25_220415_R1.XLSM  ~$181031_LaGrange_5-1.XLSM
tests/test_files/FTIR/: Bmore_Jacket_CSTM_Stripe_ATR_240517_R2.0  Natural_Nylon_Sheet_Extruded_0.125_Trans_IS_R1_221212.0  Upper_Fiber_Cement_Board_3.0
tests/test_files/MCC/: Hemp_Sheet_MCC_30K_min_220112_R1.parquet
tests/test_files/STA/: DF_FILED_DES_STA_N2_10K_231028_R1.csv  DF_FILED_DES_STA_N2_10K_231028_R1.parquet  DF_FILED_VAL_STA_N2_10K_240211_R1.csv  Ford_3FMT_Carpet_STA_N2_10K_240603_R1.ngb-ss3  Ford_3FMT_Liner_STA_N2_10K_240606_Correction_R1.ngb-bs3  Hyundai_KM8K_Carpet_STA_N2_10K_240711_R3.ngb-ss3  IBHS_Shingle_102-B-5-1_Sample_2_STA_N2_30K_240716_R1.ngb-ss3  PT_Deck_Board_3_1.ngb-ss3  PT_Deck_Board_Correction_3_1.ngb-bs3
