[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labetl"
description = 'ETL system for interpreting laboratory instrument data files and loading them into a standardized format while enforcing schema and retaining all metadata.'
readme = "README.md"
version = "0.0.3"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "GraysonBellamy", email = "gbellamy@umd.edu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-magic>=0.4.27",
  "pyarrow>=18.1.0",
  "python-dateutil>=2.9.0",
  "brukeropus>=1.1.0",
  "polars>=1.19.0",
  "fastexcel>=0.12.1",
  "numpy>=2.2.1",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.5.49", 
  "mkdocstrings[python]>=0.27.0",
]


[project.urls]
Documentation = "https://github.com/ulfsri/lab-etl#readme"
Issues = "https://github.com/ulfsri/lab-etl/issues"
Source = "https://github.com/ulfsri/lab-etl"

[tool.coverage.run]
source_pkgs = ["labetl", "tests"]
branch = true
parallel = true
omit = ["src/labetl/__about__.py"]

[tool.coverage.paths]
lab_etl = ["src/labetl", "*/lab-etl/src/labetl"]
tests = ["tests", "*/labetl/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
